# flat-design-in-rust

./: .gitignore  DATurbulenceTurnoverGrapher.qmd  README.md
FDFirstRust/: Cargo.toml
FDFirstRust-Hashset/: Cargo.toml
FDFirstRust-Hashset/src/: experiment_manager.rs  hdf5_manager.rs  main.rs  network_analyzer.rs  params.rs  scenario.rs
FDFirstRust/src/: experiment_manager.rs  experiment_manager_alt.rs  expriemnt_manages_alt.rs  hdf5_manager.rs  hdf5_manager_alt.rs  main.rs  network_analyzer.rs  outcome.db  params.rs  scenario.rs
test1/: Cargo.toml
test1/src/: experiment_manager.rs  main.rs  params.rs
test2/: Cargo.toml
test2/src/: experiment_manager.rs  hdf5_manager.rs  main.rs  params.rs  scenario.rs
