[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
once_cell = "1.20.2"
rayon = "1.5" # Parallelism
ndarray = "0.16.1"

# I/O hdf5 (*.h5) file
hdf5-metno = "0.9.4"

# Progress Bar
indicatif = {version = "0.17.9", features = ["rayon"]}
chrono = "0.4.39"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3