[package]
name = "flat"
version = "1.0.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
once_cell = "1.21.0"
rayon = "1.10.0" # Parallelism
ndarray = "0.16.1"

# I/O hdf5 (*.h5) file
hdf5 = { package = "hdf5-metno", version = "0.10.1" }

# Progress Bar
indicatif = {version = "0.17.11", features = ["rayon"]}
chrono = "0.4.40"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3