[package]
name = "test2"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.4"
once_cell = "1.20.2"
rayon = "1.5" # Parallelism
ndarray = "0.16.1"

# hdf5-metno-src = "0.9.4"
hdf5-metno-sys = "0.10.1"
# hdf5-metno = "0.9.4"

# hdf5-src = "0.8.1"
# hdf5-sys = "0.8.1"
# hdf5 = "0.8.1"

indicatif = {version = "0.17.9", features = ["rayon"]}